[project]
name = "nielxs-github-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "langchain>=1.3.14",
    "langchain-core>=1.4.9",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "mcp>=1.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
